re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__char-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"abc\")"
snapshot_kind: text
---
Ok(
    And(
        Literal(
            Char(
                'a',
            ),
        ),
        Literal(
            Char(
                'b',
            ),
        ),
        Literal(
            Char(
                'c',
            ),
        ),
    ),
)
