re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__char.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"a\")"
snapshot_kind: text
---
Ok(
    Literal(
        Char(
            'a',
        ),
    ),
)
