re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__character_class-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"\\\\s\")"
snapshot_kind: text
---
Ok(
    Or(
        Literal(
            Char(
                '\r',
            ),
        ),
        Literal(
            Char(
                '\n',
            ),
        ),
        Literal(
            Char(
                '\t',
            ),
        ),
        Literal(
            Char(
                ' ',
            ),
        ),
    ),
)
