re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__character_class-3.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"\\\\w\")"
snapshot_kind: text
---
Ok(
    Or(
        Literal(
            Range(
                'a',
                'z',
            ),
        ),
        Literal(
            Range(
                'A',
                'Z',
            ),
        ),
        Literal(
            Range(
                '0',
                '9',
            ),
        ),
        Literal(
            Char(
                '_',
            ),
        ),
    ),
)
