re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__character_class.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"\\\\d\")"
snapshot_kind: text
---
Ok(
    Literal(
        Range(
            '0',
            '9',
        ),
    ),
)
