re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__dot-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\".*.\")"
snapshot_kind: text
---
Ok(
    And(
        Many(
            Literal(
                AnyChar,
            ),
        ),
        Literal(
            AnyChar,
        ),
    ),
)
