re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__dot.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"a.c\")"
snapshot_kind: text
---
Ok(
    And(
        Literal(
            Char(
                'a',
            ),
        ),
        Literal(
            AnyChar,
        ),
        Literal(
            Char(
                'c',
            ),
        ),
    ),
)
