re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__group-2.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"[ABC]|[DEF]\")"
snapshot_kind: text
---
Ok(
    Or(
        Or(
            Literal(
                Char(
                    'A',
                ),
            ),
            Literal(
                Char(
                    'B',
                ),
            ),
            Literal(
                Char(
                    'C',
                ),
            ),
        ),
        Or(
            Literal(
                Char(
                    'D',
                ),
            ),
            Literal(
                Char(
                    'E',
                ),
            ),
            Literal(
                Char(
                    'F',
                ),
            ),
        ),
    ),
)
