re-parse-proc-macro/src/snapshots/re_parse_proc_macro__parser__tests__group.snap
---
source: re-parse-proc-macro/src/parser.rs
expression: "parse(\"[ABC]\")"
snapshot_kind: text
---
Ok(
    Or(
        Literal(
            Char(
                'A',
            ),
        ),
        Literal(
            Char(
                'B',
            ),
        ),
        Literal(
            Char(
                'C',
            ),
        ),
    ),
)
